--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-avatar": "^4.0.0",
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.2.0",
+    "react-icons": "^5.2.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-syntax-highlighter": "^15.5.0",
